kubernetes/akka-cluster-load-balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: akka-cluster-demo
spec:
  ports:
    - name: port-1
      port: 8080
      targetPort: 8080
    - name: port-2
      port: 2552
      targetPort: 2552
    - name: port-3
      port: 8558
      targetPort: 8558
  selector:
    app: akka-cluster-demo
  type: LoadBalancer
